<?xml version="1.0"?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can_logger_pkg</name>
  <version>0.0.0</version>
  <description>logging4realcar</description>
  <maintainer email="jwc@todo.todo">jwc</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosbag2_cpp</depend>
  <depend>ament index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>can_msgs</depend>
  <depend>std_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
